--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -10,6 +10,7 @@ Tested:  September 17, 2023
 -->
 <html lang="en-US">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
                <meta charset="utf-8">
                <title>Personal Reflection</title>
                <link rel="stylesheet" 
@@ -39,7 +40,8 @@ Tested:  September 17, 2023
 
             <br> 
             <div>
-                <nav>
+                <header class="header">
+               <nav>
                     <ul>
                         <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
                         <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
@@ -50,25 +52,18 @@ Tested:  September 17, 2023
                             <li><a href="#">Link 3</a></li>
                         </li>
                         </ul>
-                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a>
-                        <ul>
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                            <li><a href="#">Link 3</a></li>
-                        </li>
-                        </ul> 
-                        <li><a href="#">#contact.html</a>
-                        <ul>
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                            <li><a href="#">Link 3</a></li>
-                        </li>
-                        </ul>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
+                        <li><a href="#">#contact</a></li>
                     </ul>
-                </nav>
-            </div>
+                    </nav>
+           </header>
         </main>
-            <br>
-    <footer>Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.</footer>
+<br>
+    <footer class="footer">
+        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+    </footer>
+</div>
+ </body>
+</html>eman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.</footer>
 </body>
 </html>
