--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -5,11 +5,12 @@ Title:  Home page
 Use:  Greeting users of my site and providing an introduction.
 Author:  Kasey Freeman
 Developed: September 1, 2023
-Tested:  September 17, 2023
+Tested:  September 24, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
 <head> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <title>Home page</title>     
         <link rel="stylesheet" 
@@ -32,27 +33,28 @@ Tested:  September 17, 2023
         <p>This website is designed for <em>any viewer</em> to get to know me better as a person and professional. This also serves as a repository for me to keep track of some key projects I'm proud of. While this website is not all-inclusive of my career experience, feel free to browse around to get to know my career highlights and to know more about me as a person.
         </p>
     <br>
-        <nav>
-            <ul>
-                <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
-                <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
-                <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                </li>
-                </ul>
-                <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
-                <li><a href="#">#contact.html</a></li>
-            </ul>
-        </nav>
-    </article>
-</main>
-        <br>
-        <footer class="footer">
-            Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
-        </footer>
-    </div>
-</body>
+        <header class="header">
+               <nav>
+                    <ul>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
+                        <ul>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                        </li>
+                        </ul>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
+                        <li><a href="#">#contact</a></li>
+                    </ul>
+                    </nav>
+           </header>
+        </main>
+<br>
+    <footer class="footer">
+        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+    </footer>
+</div>
+ </body>
 </html>
