--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -11,6 +11,7 @@ Tested:  September 21, 2023
 -->
 <html lang="en-US">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
         <title>About Me</title>
         <link rel="stylesheet" 
