--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -10,6 +10,7 @@ Tested:  September 17, 2023
 -->
 <html lang="en-US">
 <head> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
         <title>Projects</title>     
         <link rel="stylesheet"
@@ -18,36 +19,28 @@ Tested:  September 17, 2023
 <body>
     <main>
         <div>
-            <nav>
-                <ul>
-                    <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
-                    <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
-                    <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
+                      <header class="header">
+               <nav>
                     <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </li>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
+                        <ul>
+                            <li><a href="#">Link 1</a></li>
+                            <li><a href="#">Link 2</a></li>
+                            <li><a href="#">Link 3</a></li>
+                        </li>
+                        </ul>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
+                        <li><a href="#">#contact</a></li>
                     </ul>
-                    <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a>
-                    <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </li>
-                    </ul> 
-                    <li><a href="#">#contact.html</a>
-                    <ul>
-                        <li><a href="#">Link 1</a></li>
-                        <li><a href="#">Link 2</a></li>
-                        <li><a href="#">Link 3</a></li>
-                    </li>
-                    </ul>
-                </ul>
-            </nav>
-        </div>
-    </main>
-<footer>            Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
-</footer>
-</body>
+                    </nav>
+           </header>
+        </main>
+<br>
+    <footer class="footer">
+        Kasey Freeman, kefreeman@umsystem.edu. Everything on this website is my intellectual property. Copying or duplicating material is not allowed.
+    </footer>
+</div>
+ </body>
 </html>
