--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -23,7 +23,7 @@ Tested:  September 24, 2023
     <main>
         <div class="wrapper">
             <header class="header">Welcome to my website!</header>
-            <aside class="sidebar">TBD still</aside>
+            <aside class="sidebar"></aside>
             <article class="content">
     <h1>Who am I?</h1>
         <p> 
