--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -33,6 +33,7 @@ Tested:  September 24, 2023
         <p>This website is designed for <em>any viewer</em> to get to know me better as a person and professional. This also serves as a repository for me to keep track of some key projects I'm proud of. While this website is not all-inclusive of my career experience, feel free to browse around to get to know my career highlights and to know more about me as a person.
         </p>
     <br>
+            </article>
         <header class="header">
                <nav>
                     <ul>
