--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -5,23 +5,26 @@ Title:  Reflection page
 Use:  A personal reflection 
 Author:  Kasey Freeman
 Developed: September 17, 2023
-Tested:  September 17, 2023
+Tested:  September 24, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-               <meta charset="utf-8">
-               <title>Personal Reflection</title>
-               <link rel="stylesheet" 
-               href="style.css">
-               <link rel="stylesheet"
-               href="nav.css">
+    <meta charset="utf-8">
+        <title>About Me</title>
+        <link rel="stylesheet" 
+        href="style.css">
+        <link rel="stylesheet"
+        href="nav.css">
 </head>
+
 <body>
     <main>
-        <h1>A Personal Reflection</h1>
-        <h3>Where I was and where I am</h3>
+        <div class="wrapper">
+  <header class="header">Personal Reflection</header>
+        <aside class="sidebar"> <h3>Where I was and where I am</h3></aside>
+        <article class="content">
         <div>
             <p>
                 <span style="color: green;">I</span> had never taken an online course until I attended my university. In my sophomore year, I took a world cultures course that changed my outlook on how education can be offered. I took as many online courses as I could during my time at the University of Central Missouri; unfortunately, in my program this only led to me taking one course every-other-semester with one specific instructor. Online courses were not particularly popular at that time at my Division-II rural university. However, knowing that I could engage in a course from anywhere on campus, especially in my residence hall, had me hooked. I went on to graduate school where online courses were still not offered, even at the request of a very motivated and vocal student (me). Sadly, the squeaky wheel did not get the grease that day, nor did it over the course of my two-year program.
@@ -40,6 +43,7 @@ Tested:  September 17, 2023
 
             <br> 
             <div>
+                    </article>
                 <header class="header">
                <nav>
                     <ul>
