--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -9,17 +9,22 @@ Tested:  September 17, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
-<head> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="utf-8">
-        <title>Projects</title>     
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+        <title>About Me</title>
+        <link rel="stylesheet" 
+        href="style.css">
         <link rel="stylesheet"
         href="nav.css">
 </head>
-<body>
-    <main>
-        <div>
-                      <header class="header">
+  <main>
+        <div class="wrapper">
+  <header class="header">A look at my work</header>
+        <aside class="sidebar"> <h3>Feel free to browse some of my projects!</h3></aside>
+        <article class="content">
+                      <div>
+                    </article>
                <nav>
                     <ul>
                         <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
