--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -5,14 +5,14 @@ Title:  Projects page
 Use:  Display projects that Kasey has worked on
 Author:  Kasey Freeman
 Developed: September 14, 2023
-Tested:  September 17, 2023
+Tested:  September 24, 2023
 ******************************************************************************
 -->
 <html lang="en-US">
-<head>
+<head> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-        <title>About Me</title>
+        <meta charset="utf-8">
+        <title>Progjects</title>     
         <link rel="stylesheet" 
         href="style.css">
         <link rel="stylesheet"
