--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -23,7 +23,7 @@ Tested:  September 21, 2023
     <main>
         <div class="wrapper">
         <header class="header">Welcome to my website!</header>
-        <aside class="sidebar">Profile picture
+        <aside class="sidebar">
          <div class="image"><img src="https://kefr7t.github.io/islt_7310/pic staff.png"></aside>
         <article class="content">
         <h1>Getting to know me</h1>
