--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -12,7 +12,7 @@ Tested:  September 24, 2023
 <head> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="utf-8">
-        <title>Progjects</title>     
+        <title>Projects</title>     
         <link rel="stylesheet" 
         href="style.css">
         <link rel="stylesheet"
@@ -25,6 +25,7 @@ Tested:  September 24, 2023
         <article class="content">
                       <div>
                     </article>
+               <header class="header">
                <nav>
                     <ul>
                         <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
