--- a/islt_7310/index.html
+++ b/islt_7310/index.html
@@ -34,16 +34,16 @@ Tested:  September 24, 2023
         </p>
     <br>
             </article>
-        <header class="header">
+               <header class="header">
                <nav>
                     <ul>
                         <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
                         <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
                         <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
                         <ul>
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                            <li><a href="#">Link 3</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
                         </li>
                         </ul>
                         <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
