--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -34,7 +34,7 @@ Tested:  September 24, 2023
                     <br>
     <p>I was also producing bi-semester newsletters to keep the campus staff up-to-date on new and seasonal processes. Here is an example of a newsletter I produced:</p>
   <br>
-  <div class="image"><img src="https:/kefr7t.github.io/islt_7310/Copy of Spring 2021 Advisors Forum Newsletter.png>
+  <div class="image"><img src="https:/kefr7t.github.io/islt_7310/Copy of Spring 2021 Advisors Forum Newsletter.png">
   <br>
 <h3>Transfer Equivalency Guides</h3>
                         <p>Transfer students coming into a new university can feel overwhelmed, underprepared, and like they do not have the same welcome as traditional students. To combat some of this, an area I was advising in started creating transfer guides for these students (and their advisors) to help boost transparency. Partnering with the key campus players, I created transfer equivalency guides to assist students transferring from community colleges into the MU College of Health Sciences. I then completed the subsequent guides for the community colleges we saw the most transfers from. This included an individual guide specific to every major offered in the College of Health Sciences.</p>
@@ -46,14 +46,14 @@ Tested:  September 24, 2023
 <h3>Accelerated MBA</h3>
                         <p> Working with key players at the Trulaske College of Business and across Mizzou, I successfully created the accelerated Master of Business Administration (MBA) program for the current Bachelor of Science in Business Administration (BSBA). This program allows students to take courses towards their graduate degree during their senior year, and then complete their MBA in one-year post-graduation. This effort included creating academic plans for all BSBA emphasis areas, gaining approval of these plans by the Office of the University Registrar (OUR) and the Undergraduate Advising Director in the College of Business, and working with OUR to navigate the details surrounding both course and student coding. In addition to being solely responsible for the program build and implementation, I also independently created the marketing materials for this program.</p>
                                                <br>
- <div class="image"><img src="https:/kefr7t.github.io/islt_7310/Accelerated MBA Poster (1).png>
+ <div class="image"><img src="https:/kefr7t.github.io/islt_7310/Accelerated MBA Poster (1).png">
                            <br>
                   <p>This project was challenging. It pushed me to further understand the needs of faculty and students while balancing those needs with the “wants” of those involved. Overall, I’m proud of what I accomplished, and I am proud to say the program is currently in their pilot year with 4 enrolled students.</p>
                         <br>
                     <p>Additional marketing materials I have produced are included below:</p>
-                         <div class="image"><img src="https:/kefr7t.github.io/islt_7310/Fall 2022 GPO Welcome Event (1).png>
+                         <div class="image"><img src="https:/kefr7t.github.io/islt_7310/Fall 2022 GPO Welcome Event (1).png">
                                               <br>
-                                               <div class="image"><img src="https:/kefr7t.github.io/islt_7310/2022 Request for Feedback for Fall Welcome Event.png>
+                                               <div class="image"><img src="https:/kefr7t.github.io/islt_7310/2022 Request for Feedback for Fall Welcome Event.png">
 
                                                                     <br>
                     </article>
