--- a/islt_7310/project.html
+++ b/islt_7310/project.html
@@ -10,7 +10,7 @@ Tested:  September 24, 2023
 -->
 <html lang="en-US">
 <head> 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
         <title>Projects</title>     
         <link rel="stylesheet" 
