--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -11,7 +11,6 @@ Tested:  September 24, 2023
 -->
 <html lang="en-US">
 <head> 
-
         <meta charset="utf-8">
         <title>About me</title>     
         <link rel="stylesheet" 
@@ -45,6 +44,7 @@ Tested:  September 24, 2023
             <br>
             <base href="https://kefr7t.github.io/islt_7310/about.html"/>
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
+           <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume1.png"> <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume2.png">
             <br>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br>
