--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -23,7 +23,23 @@ Tested:  September 24, 2023
         <div class="wrapper">
         <header class="header">Welcome to my website!</header>
         <aside class="sidebar">
-         <div class="image"><img src="https://kefr7t.github.io/islt_7310/pic staff.png"></aside>
+         <div class="image"><img src="https://kefr7t.github.io/islt_7310/pic staff.png">   
+               <nav>
+                    <ul>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
+                        <ul>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
+                        </li>
+                        </ul>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
+                        <li><a href="#">#contact</a></li>
+                    </ul>
+                    </nav>
+             </aside>
         <article class="content">
         <h1>Getting to know me</h1>
         <p>My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
@@ -49,23 +65,7 @@ Tested:  September 24, 2023
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br>
           </article>
-             <aside class="sidebar">
-               <nav>
-                    <ul>
-                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
-                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
-                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
-                        <ul>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
-                        </li>
-                        </ul>
-                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
-                        <li><a href="#">#contact</a></li>
-                    </ul>
-                    </nav>
-             </aside>
+
         </main>
 <br>
     <footer class="footer">
