--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -17,6 +17,11 @@ Tested:  September 24, 2023
         href="style.css">
         <link rel="stylesheet"
         href="nav.css">
+  <style>
+body {
+    font-family: 'Montserrat';font-size: 18px;
+}
+</style>
 </head>
 <body>
     <main>
