--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -67,7 +67,7 @@ body {
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
            <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume1.png"> <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume2.png">
             <br>
-             <iframe width="100px" height="80px" src="https://kefr7t.github.io/islt_7310/Freeman resume video.mp4">
+             <iframe width="auto" height="auto" src="https://kefr7t.github.io/islt_7310/Freeman resume video.mp4">
              </iframe>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br>
