--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -17,6 +17,7 @@ Tested:  September 24, 2023
         href="style.css">
         <link rel="stylesheet"
         href="nav.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <style>
 body {
     font-family: 'Montserrat';font-size: 18px;
