--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -47,12 +47,19 @@ body {
                     </nav>
              </aside>
         <article class="content">
-        <h1>Getting to know me</h1>
-        <p>My name is Kasey Freeman. I have a Bachelor of Arts in International Studies
-            and a Master of Science in College Student Personnel Administration from
-            the University of Central Missouri. I currently attend the University of
-            Missouri for the Online Educator Graduate Certificate. I will complete this in
-            December 2023. 
+        <h1>Getting to know me, Kasey</h1>
+        <p>My name is Kasey Freeman. 
+          <br>
+          Quick facts: 
+          <ul>
+            <li>I have a Bachelor of Arts in International Studies</li>
+            <li>I have a Master of Science in College Student Personnel Administration
+            <li> Both of my degrees are from the University of Central Missouri (Go mules!)</li>
+          </li>
+            <li>I currently attend the University of Missouri for the Online Educator Graduate Certificate
+            <li>This certificate will be complete in October 2023</li>
+          </li>
+          </ul>
             <br></p>
            <p>I am currently a Program Coordinator with Missouri Online.
             Missouri Online supports <em>all</em> online programs in the University of Missouri
@@ -68,7 +75,7 @@ body {
             <a href="/islt_7310/Freeman resume.pdf.pdf">Check out my resume!</a>
            <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume1.png"> <div class="image"><img src="https://kefr7t.github.io/islt_7310/resume2.png">
             <br>
-             <iframe width="auto" height="auto" src="https://kefr7t.github.io/islt_7310/Freeman resume video.mp4">
+             <div class="video"><iframe width="auto" height="auto" src="https://kefr7t.github.io/islt_7310/Freeman resume video.mp4">
              </iframe>
             <blockquote> A dog is the only thing on earth that loves you more than you love yourself. - George Eliot</blockquote>
             <br>
