--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -50,7 +50,7 @@ body {
         <h1>Getting to know me, Kasey</h1>
         <p>My name is Kasey Freeman. 
           <br>
-          Quick facts: 
+          <strong>Quick facts:</strong> 
           <ul>
             <li>I have a Bachelor of Arts in International Studies</li>
             <li>I have a Master of Science in College Student Personnel Administration
@@ -67,7 +67,7 @@ body {
             education. I am happy to say I have found my corner in higher education
             that I want to continue to grow in. My days outside of work are filled with
             being a mom to a 2-year-old and taking care of my two dogs. Seeing the
-            world through my son’s eyes <strong>constantly</strong> gives me a new perspective. I enjoy
+            world through my son’s eyes constantly gives me a new perspective. I enjoy
             drinking dark roast coffee and jasmine tea (<em>separately</em>). I am happiest when I
             am eating sushi with good company. </p>
             <br>
