--- a/islt_7310/about.html
+++ b/islt_7310/about.html
@@ -48,17 +48,22 @@ body {
              </aside>
         <article class="content">
         <h1>Getting to know me, Kasey</h1>
-        <p>My name is Kasey Freeman. 
+        <p>My name is Kasey Freeman.</p>
           <br>
+          <p>
           <strong>Quick facts:</strong> 
           <ul>
             <li>I have a Bachelor of Arts in International Studies</li>
             <li>I have a Master of Science in College Student Personnel Administration
+              <ul>
             <li> Both of my degrees are from the University of Central Missouri (Go mules!)</li>
           </li>
+            </ul>
             <li>I currently attend the University of Missouri for the Online Educator Graduate Certificate
+              <ul>
             <li>This certificate will be complete in October 2023</li>
           </li>
+          </ul>
           </ul>
             <br></p>
            <p>I am currently a Program Coordinator with Missouri Online.
