--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -28,7 +28,24 @@ body {
     <main>
         <div class="wrapper">
   <header class="header">Personal Reflection</header>
-        <aside class="sidebar"> <h3>Where I was and where I am</h3></aside>
+        <aside class="sidebar"> <h3>Where I was and where I am</h3>
+        <nav>
+                    <ul>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
+                        <ul>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
+                        </li>
+                        </ul>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
+                        <li><a href="#">#contact</a></li>
+                    </ul>
+                    </nav>
+             </aside>
+        </aside>
         <article class="content">
         <div>
             <p>
@@ -49,24 +66,7 @@ body {
             <br> 
             <div>
                     </article>
-                <header class="header">
-
-               <nav>
-                    <ul>
-                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
-                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
-                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
-                        <ul>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
-                        </li>
-                        </ul>
-                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
-                        <li><a href="#">#contact</a></li>
-                    </ul>
-                    </nav>
-           </header>
+        
         </main>
 <br>
     <footer class="footer">
