--- a/islt_7310/reflection.html
+++ b/islt_7310/reflection.html
@@ -29,21 +29,6 @@ body {
         <div class="wrapper">
   <header class="header">Personal Reflection</header>
         <aside class="sidebar"> <h3>Where I was and where I am</h3>
-        <nav>
-                    <ul>
-                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
-                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
-                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
-                        <ul>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
-                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
-                        </li>
-                        </ul>
-                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
-                        <li><a href="#">#contact</a></li>
-                    </ul>
-                    </nav>
              </aside>
         </aside>
         <article class="content">
@@ -65,6 +50,23 @@ body {
 
             <br> 
             <div>
+                <header class="header">
+                  <nav>
+                    <ul>
+                        <li class="active"><a href="https://kefr7t.github.io/islt_7310/index.html#">Home</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/about.html">About</a></li>
+                        <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Projects</a>
+                        <ul>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Advisors Forum Professional Development Series</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Transfer Equivalency Guides</a></li>
+                            <li><a href="https://kefr7t.github.io/islt_7310/project.html#">Accelerated MBA</a></li>
+                        </li>
+                        </ul>
+                        <li><a href="https://kefr7t.github.io/islt_7310/reflection.html">Reflection</a></li>
+                        <li><a href="#">#contact</a></li>
+                    </ul>
+                    </nav>
+                </header>
                     </article>
         
         </main>
